--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+Babel==2.8.0
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
 Django==2.2.4
+django-phonenumber-field==4.0.0
 djangorestframework==3.10.2
+idna==2.9
 mysqlclient==1.4.4
+phonenumbers==8.12.1
+Pillow==7.1.1
 pytz==2019.2
+requests==2.23.0
+soupsieve==2.0
 sqlparse==0.3.0
+urllib3==1.25.8
